<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green">
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="312dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vhod"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="24dp"
            android:layout_gravity="center"></TextView>

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@color/green"
            android:layout_marginLeft="195dp"
            android:src="@drawable/arr"></ImageButton>
    </LinearLayout>
    <EditText
        android:id="@+id/uv"
        android:layout_width="312dp"
        android:layout_height="32dp"
        android:background="@drawable/angles_two"
        android:layout_gravity="center"
        android:layout_marginTop="185dp"
        android:padding="5dp"
        android:hint="@string/user"></EditText>
    <EditText
        android:id="@+id/pv"
        android:layout_width="312dp"
        android:layout_height="32dp"
        android:background="@drawable/angles_two"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:inputType="textPassword"
        android:padding="5dp"
        android:hint="@string/password"></EditText>
    <Button
        android:id="@+id/sigh_up"
        android:layout_width="312dp"
        android:layout_height="48dp"
        android:background="@drawable/angles"
        android:text="@string/vhod"
        android:layout_gravity="center"
        android:gravity="center"
        android:onClick="voidite"
        android:layout_marginTop="15dp"
        android:textColor="@color/white"
        android:textSize="18dp"
        android:textAllCaps="false"></Button>

</LinearLayout>